--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="grid-container">
-      <nav class="nav navbar navbar-dark navbar-expand-lg bg-body-tertiary">
+      <nav class="nav navbar navbar-expand-lg ">
         <!--nav burger -->
         <div class="container-fluid">
           <h1>TravelMoon</h1>
@@ -59,28 +59,136 @@
             </ul>
           </div>
         </div>
+        <div class="mundo"></div>
       </nav>
       <main>
-        <section class="intro"></section>
-        <section id="itinerario"></section>
+        <section class="intro">
+          <h1>Blog itinerario para Japon</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+            tenetur totam iusto, ipsam quia laboriosam culpa soluta, aut
+            dignissimos doloremque dolor sint tempora quo? Tempore praesentium
+            est dolor accusantium vero!
+          </p>
+        </section>
+        <section id="itinerario">
+          <h2>Itinerario</h2>
+          <p>Te entregamos los itinerarios completos por ciudad.</p>
+          <div class="cards">
+            <div class="flip flip-vertical">
+              <div class="front tokyo">
+                <h1 class="text-shadow">TOKYO</h1>
+              </div>
+              <div class="back">
+                <h2>Angular</h2>
+                <p>
+                  Good tools make application development quicker and easier to
+                  maintain than if you did everything by hand..
+                </p>
+              </div>
+            </div>
+            <div class="flip flip-vertical">
+              <div class="front osaka">
+                <h1 class="text-shadow">OSAKA</h1>
+              </div>
+              <div class="back">
+                <h2>Angular</h2>
+                <p>
+                  Good tools make application development quicker and easier to
+                  maintain than if you did everything by hand..
+                </p>
+              </div>
+            </div>
+            <div class="flip flip-vertical">
+              <div class="front nara">
+                <h1 class="text-shadow">NARA</h1>
+              </div>
+              <div class="back">
+                <h2>Angular</h2>
+                <p>
+                  Good tools make application development quicker and easier to
+                  maintain than if you did everything by hand..
+                </p>
+              </div>
+            </div>
+            <div class="flip flip-vertical">
+              <div class="front hiroshima">
+                <h1 class="text-shadow">Hiroshima</h1>
+              </div>
+              <div class="back">
+                <h2>Angular</h2>
+                <p>
+                  Good tools make application development quicker and easier to
+                  maintain than if you did everything by hand..
+                </p>
+              </div>
+            </div>
+            <div class="flip flip-vertical">
+              <div class="front kyoto">
+                <h1 class="text-shadow">KYOTO</h1>
+              </div>
+              <div class="back">
+                <h2>Angular</h2>
+                <p>
+                  Good tools make application development quicker and easier to
+                  maintain than if you did everything by hand..
+                </p>
+              </div>
+            </div>
+            <div class="flip flip-vertical">
+              <div class="front hakone">
+                <h1 class="text-shadow">HAKONE</h1>
+              </div>
+              <div class="back">
+                <h2>Angular</h2>
+                <p>
+                  Good tools make application development quicker and easier to
+                  maintain than if you did everything by hand..
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
 
-        <section id="consejos"></section>
-        <section id="presupuestos"></section>
-        <section id="contacto"></section>
+        <section id="consejos">
+        <h2>Consejos utiles para viajar por Japon</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
+          laudantium quia impedit fugit quae amet veritatis tenetur voluptate
+          asperiores, corrupti neque incidunt necessitatibus magnam similique
+          iste laborum! Ipsam, doloribus vel!
+        </p>
+    </section>
+        <section id="presupuestos">
+        <h2>Presupuestos por ciudad</h2>
+        <p>
+          En la siguiente tabla puedes ver el presupuesto completo de estadia,
+          entretenimiento, transporte y extras.
+        </p>
+    </section>
+        <section id="contacto">
+        <h2>Contacto</h2>
+        <p>
+          Si deseas preguntarnos algo o contratar alguno de nuestros paquetes de
+          viaje puedes hacer de la siguiente manera:
+        </p>
+    </section>
+       
       </main>
       <footer>
         <p>E-mail: alberto.luna87@hotmail.com</p>
         <p>
-          Created by Lunatico87. <br />
-          All rights reserved. 2024 <br />
-                </p>
-                <div><a href="https://github.com/Lunatico87"
-                ><i class="fa-brands fa-github fa-xl"></i
-              ></a>
-              <a href="https://instagram.com/beto_luna87"
-                ><i class="fa-brands fa-square-instagram fa-xl"></i
-              ></a>
-            </div>
+          Created by Lunatico87. 
+          All rights reserved. 2024 
+        </p>
+        <div>
+          <a href="https://github.com/Lunatico87"
+            ><i class="fa-brands fa-github fa-xl"></i
+          ></a>
+          <a href="https://instagram.com/beto_luna87"
+            ><i class="fa-brands fa-square-instagram fa-xl"></i
+          ></a>
+        </div>
       </footer>
     </div>
   </body>
