media query y estilos

--- a/index.html
+++ b/index.html
@@ -50,17 +50,24 @@
                   class="nav-link active"
                   aria-current="page"
                   href="#itinerario"
-                  >Itinerario</a
+                  ><i class="fanav fa-solid fa-clipboard-list"></i>
+                  Itinerario</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#consejos">Consejos</a>
+                <a class="nav-link" href="#consejos"
+                  ><i class="fanav fa-solid fa-lightbulb"></i> Consejos</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#presupuestos">Presupuestos</a>
+                <a class="nav-link" href="#presupuestos"
+                  ><i class="fanav fa-solid fa-dollar-sign"></i> Presupuestos</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contacto">Contacto</a>
+                <a class="nav-link" href="#contacto"
+                  ><i class="fanav fa-solid fa-phone-volume"></i> Contacto</a
+                >
               </li>
             </ul>
           </div>
@@ -69,28 +76,37 @@
       </nav>
       <main>
         <section class="intro">
-          <h1>Blog itinerario para Japon</h1>
+          <h1>Plan de viaje a Japón</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-            tenetur totam iusto, ipsam quia laboriosam culpa soluta, aut
-            dignissimos doloremque dolor sint tempora quo? Tempore praesentium
-            est dolor accusantium vero!
+            Bienvenidos al sitio de viajes a Japón, donde te llevaremos a través
+            de emocionantes itinerarios y te ofreceremos consejos prácticos para
+            explorar esta fascinante tierra donde la modernidad se encuentra con
+            la tradición. Acompáñanos en un viaje virtual desde Tokio hasta
+            Kyoto, explorando la rica cultura, la deliciosa gastronomía y los
+            impresionantes paisajes de Japón.
           </p>
         </section>
         <section id="itinerario">
           <h2>Itinerario</h2>
-          <p>Te entregamos los itinerarios completos por ciudad.</p>
+          <p>
+            Desde la modernidad de Tokio hasta la historia de Kyoto, cada ciudad
+            ofrece una experiencia única que te dejará maravillado. Revisa los
+            itinerarios por ciudad.
+          </p>
           <div class="cards">
             <div class="flip flip-vertical">
               <div class="front tokyo">
                 <h3>TOKYO</h3>
               </div>
               <div class="back">
-                <h4>Angular</h4>
+                <h4>Tokio en 5 días</h4>
                 <p>
-                  Good tools make application development quicker and easier to
-                  maintain than if you did everything by hand..
+                  Descubre la fascinante metrópolis de Tokio, donde la tradición
+                  y la modernidad se entrelazan. Explora sus diversos barrios,
+                  disfrutando de su rica cultura, deliciosa gastronomía y
+                  emocionantes experiencias tecnológicas.
                 </p>
+                <a href="#" class="btn">Ver más</a>
               </div>
             </div>
             <div class="flip flip-vertical">
@@ -98,11 +114,14 @@
                 <h3 class="text-shadow">OSAKA</h3>
               </div>
               <div class="back">
-                <h4>Angular</h4>
+                <h4>Osaka en 4 días</h4>
                 <p>
-                  Good tools make application development quicker and easier to
-                  maintain than if you did everything by hand..
+                  Explora Osaka, una ciudad que fusiona tradición y modernidad.
+                  Disfruta de su gastronomía, visita el Castillo de Osaka,
+                  explora el bullicioso Dotonbori y relájate en el Jardín
+                  Japonés de Nishinomaru.
                 </p>
+                <a href="#" class="btn">Ver más</a>
               </div>
             </div>
             <div class="flip flip-vertical">
@@ -110,23 +129,28 @@
                 <h3 class="text-shadow">NARA</h3>
               </div>
               <div class="back">
-                <h4>Angular</h4>
+                <h4>Nara en 1 día</h4>
                 <p>
-                  Good tools make application development quicker and easier to
-                  maintain than if you did everything by hand..
+                  Visita el Parque Nara, hogar de ciervos sagrados y templos
+                  ancestrales como el Todai-ji. Sumérgete en la atmósfera donde
+                  la espiritualidad y la historia se fusionan en un escenario
+                  encantador.
                 </p>
+                <a href="#" class="btn">Ver más</a>
               </div>
             </div>
             <div class="flip flip-vertical">
               <div class="front hiroshima">
-                <h3 class="text-shadow">Hiroshima</h3>
+                <h3 class="text-shadow">HIROSHIMA</h3>
               </div>
               <div class="back">
-                <h4>Angular</h4>
+                <h4>Hiroshima en 2 días</h4>
                 <p>
-                  Good tools make application development quicker and easier to
-                  maintain than if you did everything by hand..
+                  Una ciudad de historia y resiliencia. Visita el Parque de la
+                  Paz y el Museo Memorial, explora el Castillo de Hiroshima y
+                  admira el Santuario Itsukushima en Isla Miyajima.
                 </p>
+                <a href="#" class="btn">Ver más</a>
               </div>
             </div>
             <div class="flip flip-vertical">
@@ -134,11 +158,14 @@
                 <h3 class="text-shadow">KYOTO</h3>
               </div>
               <div class="back">
-                <h4>Angular</h4>
+                <h4>Kyoto en 3 días</h4>
                 <p>
-                  Good tools make application development quicker and easier to
-                  maintain than if you did everything by hand..
+                  Una ciudad rica en historia y belleza. Visita sus templos
+                  ancestrales, como el Kinkaku-ji y el Fushimi Inari Taisha,
+                  explora los barrios tradicionales de Gion y Higashiyama.
+                  Disfruta de la serenidad de esta ciudad encantadora.
                 </p>
+                <a href="#" class="btn">Ver más</a>
               </div>
             </div>
             <div class="flip flip-vertical">
@@ -146,11 +173,14 @@
                 <h3 class="text-shadow">HAKONE</h3>
               </div>
               <div class="back">
-                <h4>Angular</h4>
+                <h4>Hakone en 2 días</h4>
                 <p>
-                  Good tools make application development quicker and easier to
-                  maintain than if you did everything by hand..
+                  Descubre Hakone, Japón: aguas termales, vistas al Monte Fuji
+                  desde el lago Ashi, Museo al Aire Libre de Esculturas, Museo
+                  de Arte de Hakone y el Santuario Hakone Shrine. Una
+                  experiencia única de naturaleza, arte y cultura.
                 </p>
+                <a href="#" class="btn">Ver más</a>
               </div>
             </div>
           </div>
@@ -158,32 +188,152 @@
 
         <section id="consejos">
           <h2>Consejos utiles para viajar por Japon</h2>
+          <p>Aquí tienes unos consejos útiles para tu viaje por Japón:</p>
+          <ol>
+            <li>
+              Obtén un pase de tren JR para ahorrar en viajes de larga
+              distancia.
+            </li>
+            <li>
+              Aprende algunas frases básicas en japonés para facilitar la
+              comunicación.
+            </li>
+            <li>Respeta las normas de etiqueta y la cultura local.</li>
+            <li>
+              Utiliza el eficiente transporte público, como trenes y autobuses.
+            </li>
+            <li>
+              Disfruta de la variada gastronomía japonesa, desde sushi hasta
+              ramen.
+            </li>
+            <li>
+              Planifica con anticipación las visitas a lugares turísticos para
+              evitar multitudes.
+            </li>
+            <li>
+              Separa correctamente tus desechos y sigue las normas de gestión de
+              residuos.
+            </li>
+            <li>
+              Prepárate para el clima y las estaciones del año, y ten en cuenta
+              los eventos estacionales.
+            </li>
+          </ol>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
-            laudantium quia impedit fugit quae amet veritatis tenetur voluptate
-            asperiores, corrupti neque incidunt necessitatibus magnam similique
-            iste laborum! Ipsam, doloribus vel!
+            Siguiendo estos consejos, tendrás un viaje más cómodo y enriquecedor
+            por Japón. ¡Disfruta al máximo tu aventura!
           </p>
         </section>
         <section id="presupuestos">
           <h2>Presupuestos por ciudad</h2>
           <p>
-            En la siguiente tabla puedes ver el presupuesto completo de estadia,
-            entretenimiento, transporte y extras.
+            Para tu itinerario en Japón, considerando el alojamiento, la comida,
+            el transporte y algunas actividades. Ten en cuenta que estos son
+            estimados y los precios pueden variar dependiendo de varios
+            factores, como la temporada, la ubicación y tus preferencias
+            personales.
+          </p>
+          <div class="ciudades">
+            <div class="ciudad">
+              <h3>Tokio (5 días):</h3>
+              <ul>
+                <li>Alojamiento: $570 - $1960 por persona</li>
+                <li>Comida: $225 - $750</li>
+                <li>Transporte: $45 - $60</li>
+                <li>Actividades: $50 - $150</li>
+              </ul>
+            </div>
+            <div class="ciudad">
+              <h3>Osaka (4 días):</h3>
+              <ul>
+                <li>Alojamiento: $400 - $1360 por persona</li>
+                <li>Comida: $180 - $600</li>
+                <li>Transporte: $20 - $40</li>
+                <li>Actividades: $40 - $120</li>
+              </ul>
+            </div>
+            <div class="ciudad">
+              <h3>Nara (1 día):</h3>
+              <ul>
+                <li>Comida: $65 - $190</li>
+                <li>Transporte: $10 - $20</li>
+                <li>Actividades: $10 - $20</li>
+              </ul>
+            </div>
+            <div class="ciudad">
+              <h3>Hiroshima (2 días):</h3>
+              <ul>
+                <li>Alojamiento: $210 - $700 por persona</li>
+                <li>Comida: $90 - $300</li>
+                <li>Transporte: $20 - $40</li>
+                <li>Actividades: $20 - $60</li>
+              </ul>
+            </div>
+            <div class="ciudad">
+              <h3>Kyoto (3 días):</h3>
+              <ul>
+                <li>Alojamiento: $345 - $1190 por persona</li>
+                <li>Comida: $135 - $450</li>
+                <li>Transporte: $30 - $50</li>
+                <li>Actividades: $30 - $90</li>
+              </ul>
+            </div>
+            <div class="ciudad">
+              <h3>Hakone (2 días):</h3>
+              <ul>
+                <li>Alojamiento: $360 - $1050 por persona</li>
+                <li>Comida: $90 - $300</li>
+                <li>Transporte: $30 - $50</li>
+                <li>Actividades: $40 - $100</li>
+              </ul>
+            </div>
+          </div>
+          <p>Total aproximado para todo el viaje: $1950 - $6350 por persona</p>
+
+          <p>
+            Sumando todos los totales, el presupuesto aproximado para todo el
+            viaje podría estar entre $1950 y $6350 por persona. Recuerda que
+            estos son solo estimados y los precios pueden variar. Es importante
+            investigar y planificar con anticipación para obtener los mejores
+            precios y opciones según tu presupuesto y preferencias.
           </p>
         </section>
         <section id="contacto">
           <h2>Contacto</h2>
           <p>
-            Si deseas preguntarnos algo o contratar alguno de nuestros paquetes
-            de viaje puedes hacer de la siguiente manera:
+            Si tienes cualquier consulta sobre que lugares visitar, principales
+            atracciones por ciudad, dias de alojamiento, presupuesto estimado y
+            no sabes como organizarte, !no te preocupes que nosotros lo hacemos
+            por ti!
           </p>
+
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label"
+              >Correo electronico</label
+            >
+            <input
+              type="email"
+              class="form-control"
+              id="exampleFormControlInput1"
+              placeholder="name@example.com"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label"
+              >Escribenos</label
+            >
+            <textarea
+              class="form-control"
+              id="exampleFormControlTextarea1"
+              rows="3"
+            ></textarea>
+          </div>
+          <a href="#" class="btn">Enviar</a>
         </section>
       </main>
       <footer class="footer">
         <div class="footer-left">
           <h4>TravelM<span>oo</span>n</h4>
-          <br />
           <p>Creado por Lunatico87</p>
           <p>Todos los derechos reservados</p>
         </div>
